--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>kk</groupId>
 	<artifactId>ljh_wf_serve_demand</artifactId>
-	<version>1.0.6.961064M</version>
+	<version>1.0.7.024562</version>
 
 	<name>ljh_wf_serve_demand</name>
 	<url>http://weforward.cn</url>
